--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
     <head>
         <title>
-            My first website!
+            Home | Noé Jager
         </title>
     </head>
     <body>
-        <h1>Noé Jager</h1>
+        <h1>Home</h1>
+        <img src="me.jpg" width="325" height="500"/>
         <div>
             <h3>Table of contents</h3>
             <ol>
@@ -19,15 +20,79 @@
         </div>
         <div id="me">
             <h3>About Me</h3>
+            <p> 
+                Hi, my name is Noé Jager, I am a master student in Computer Science. Through my university years, <br>
+                I have developed a diverse skillset in programming applications, and a hunger for new challenges. <br>
+                Since my first university year, I have accumulated a wealth of programing experience and computer <br>
+                knowledge in areas such as Artificial Intelligence, Data Science/Data Visualizations. <br>
+                Please feel free to explore my portfolio, and I'd be delighted to discuss potential opportunities for collaboration. <br>
+            </p>
         </div>
         <div id="education">
             <h3>Education</h3>
+            <p>Master in Computer Science at Université de Montréal</p>
+            <ul>
+                <li>Date: September 2022 - Upcoming</li>
+                <li>Relevant courses: Data Science, Machine Learning Fundamentals, and Data Visualization</li>
+            </ul>
+            <p>Bachelor of Science in Computer Science at University of Luxembourg</p>
+            <ul>
+                <li>Date: September 2019 - July 2022</li>
+                <li>GPA: 3.0</li>
+                <li>
+                    Relevant courses: Web development, Software Engineering, Networking and Communication, Cybersecurity 1 and 2, <br>
+                    Human Computer Interaction and User Centered Design
+                </li>
+            </ul>
+            <p>Online Courses</p>
+            <ul>
+                <li> Design in Art and Concepts Specialization (Coursera - CalArts) </li>
+                <li> Data Mining Specialization by the University of Illinois at Urbana-Champaign </li>
+            </ul>
         </div>
         <div id="projects">
             <h3>Projects</h3>
+            <p>Drawing with a webcam</p>
+            <ul>
+                <li> Date: February - June 2022 </li>
+                <li> Developed a real-time drawing application using Python and openCV </li>
+                <li> Analyzed finger positions to determine drawing actions </li>
+            </ul>
+            <p>Handwriting generator with Tensorflow</p>
+            <ul>
+                <li> Date: September 2021 - January 2022 </li>
+                <li> Created a Recurrent Neural Network in Python with the TensorFlow library </li>
+                <li> Data extraction, cleaning, definition of a model, its training, then creation of the Chatbot interface </li>
+                <li> The model had 3 parts: encoding, Bahdanau Attention, and decoding </li>
+                <li> Replicated various handwriting styles using a dataset from a separate project </li>
+            </ul>
+            <p>Conversational Chatbot with Tensorflow </p>
+            <ul>
+                <li> Date: February - June 2021 </li>
+                <li> Implemented a Convolutional Neural Network for chatbot functions in Python with TensorFlow </li>
+                <li> Reddit threads with parent commentaries as a dataset between French and English and engages in small talk </li>
+            </ul>
+            <p>Q Learning for a drone in a simulated environment</p>
+            <ul>
+                <li> Date: September 2020 - January 2021 </li>
+                <li> Trained a drone to navigate while avoiding obstacles in a simulated environment (airsim) using Python </li>
+                <li> Q-learning with a defined Q table and rewards </li>
+            </ul>
+            <p> Control of a group of drone with Unreal Engine 4 using Python </p>
+            <ul>
+                <li>Date: February - June 2020</li>
+                <li>Collaborated with a researcher to create a simulated environment with quadrotors as agents</li>
+                <li>Controlled drones to avoid obstacles and collisions using Unreal Engine 4 and Python</li>
+                <li>Applied linear algebra concepts for precise drone movements</li>
+            </ul>
         </div>
         <div id="contact">
             <h3>Contact Me</h3>
+            <p>You can find me here:</p>
+            <ul>
+                <li><a href="https://github.com/elnukakujo" target="_blank">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank">Linkedin</a></li>
+            </ul>
         </div>
     </body>
 </html>
