--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
             About me | Noé Jager
         </title>
         <link href="./style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <nav>
-            <a href="./index.html"><h1>Noe Jager</h1></a>
+        <div id="nav">
+            <a href="./index.html" id="title_name"><h1>Noe Jager</h1></a>
             <div id="links">
                 <a href="./index.html">About Me</a>
-                <a href="./projects.html">My Work</a>
+                <a href="./education.html">Education</a>
+                <a href="./projects.html">Projects</a>
             </div>
-        </nav>
+        </div>
         <div class='header'>
             <section class="intro">
                 <figure id="me_container">
@@ -35,64 +37,20 @@
         <main>
             <section id="education">
                 <h3>Education</h3>
-                <article>
-                    <h4>Master in Computer Science at Université de Montréal</h4>
-                    <ul>
-                        <li>Date: September 2022 - Upcoming</li>
-                        <li>Relevant courses: Data Science, Machine Learning Fundamentals, and Data Visualization</li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>Bachelor of Science in Computer Science at University of Luxembourg</h4>
-                    <ul>
-                        <li>Date: September 2019 - July 2022</li>
-                        <li>GPA: 3.0</li>
-                        <li>
-                            Relevant courses: Web development, Software Engineering, Networking and Communication, Cybersecurity 1 and 2, <br>
-                            Human Computer Interaction and User Centered Design
-                        </li>
-                    </ul>
-                </article>
-                <article>
-                    <h4>Online Courses</h4>
-                    <ul>
-                        <li> Design in Art and Concepts Specialization (Coursera - CalArts) </li>
-                        <li> Data Mining Specialization by the University of Illinois at Urbana-Champaign </li>
-                    </ul>
-                </article>
+                <h4><a href="./education.html#masterUdem">Master in Computer Science at Université de Montréal</a></h4>
+                <h4><a href="./education.html#bacUniLu">Bachelor of Science in Computer Science at University of Luxembourg</a></h4>
+                <h4><a href="./education.html#oc">Online Courses</a></h4>
             </section>
             <section id="projects">
                 <h3>Projects</h3>
-                <article id="p1">
-                    <h4><a href="https://github.com/elnukakujo/BSP06-Drawing-with-a-webcam">Drawing with a webcam</a></h4>
-                    <ul>
-                        <li> Date: February - June 2022 </li>
-                        <li> Developed a real-time drawing application using Python and openCV </li>
-                        <li> Analyzed finger positions to determine drawing actions </li>
-                    </ul>
-                </article>
-                <article id="p2">
-                    <h4>Handwriting generator with Tensorflow</h4>
-                    <ul>
-                        <li> Date: September 2021 - January 2022 </li>
-                        <li> Created a Recurrent Neural Network in Python with the TensorFlow library </li>
-                        <li> Data extraction, cleaning, definition of a model, its training, then creation of the Chatbot interface </li>
-                        <li> The model had 3 parts: encoding, Bahdanau Attention, and decoding </li>
-                        <li> Replicated various handwriting styles using a dataset from a separate project </li>
-                    </ul>
-                </article>
-                <article id="p3">
-                    <h4>Conversational Chatbot with Tensorflow </h4>
-                    <ul>
-                        <li> Date: February - June 2021 </li>
-                        <li> Implemented a Convolutional Neural Network for chatbot functions in Python with TensorFlow </li>
-                        <li> Reddit threads with parent commentaries as a dataset between French and English and engages in small talk </li>
-                    </ul>
-                </article>
-                <p> <a href="./projects.html">More details here</a></p>
+                <a href="./projects.html#0"><h4>Drawing with a webcam</h4></a>
+                <a href="./projects.html#1"><h4>Design of a privacy app with Figma</h4></a>
+                <a href="./projects.html#2"><h4>Handwriting generator with Tensorflow</h4></a>
+                <a href="./projects.html#3"><h4>Conversational Chatbot with Tensorflow</h4></a>
+                <a href="./projects.html#4"><h4>Q Learning for a drone in a simulated environment</h4></a>
+                <a href="./projects.html#5"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
             </section>
         </main>
-        <hr>
         <footer>
             <section id="contact">
                 <h3>Contact Me</h3>
