--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,10 @@
     </head>
     <body>
         <div id="nav">
-            <a href="./index.html" id="title_name"><h1>Noe Jager</h1></a>
-            <div id="links">
-                <a href="./index.html">About Me</a>
+            <a href="./index.html" class="title"><h1>Noe Jager</h1></a>
+            <div class="links">
+                <a href="./index.html">Home</a>
+                <a href="./aboutme.html">About Me</a>
                 <a href="./education.html">Education</a>
                 <a href="./projects.html">Projects</a>
             </div>
