--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id='header'>
             <div class="intro">
                 <figure class="fig_me">
-                    <img src="img/me.jpg" alt="A picture of me" width="325" height="500"/>
+                    <a href="aboutme.html"><img src="img/me.jpg" alt="A picture of me" width="325" height="500"/></a>
                 </figure>
                 <section>
                     <a href="./aboutme.html"><h3>About Me</h3></a>
