Education and Projects finished v1

--- a/aboutme.html
+++ b/aboutme.html
@@ -18,5 +18,16 @@
                 <a href="./projects.html">Projects</a>
             </div>
         </div>
+        <main>
+            
+        </main>
+        <footer>
+            <h3>Contact Me</h3>
+            <figure class="contacts">
+                <a href="https://github.com/elnukakujo" target="_blank"><img src="img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
+                <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
+            </figure>
+        </footer>
     </body>
 </html>
