--- a/education.html
+++ b/education.html
@@ -17,33 +17,44 @@
                 <a href="./projects.html">Projects</a>
             </div>
         </div>
-        <main>
+        <main id="education">
             <h3>Education</h3>
-            <article id="masterUdeM">
-                <h4>Master in Computer Science at Université de Montréal</h4>
+            <div class="anchor" id="masterUdem"></div>
+            <div>
+                <h4 class="title">Master in Computer Science at Université de Montréal</h4>
                 <ul>
-                    <li>Date: September 2022 - Upcoming</li>
+                    <li class="date">Date: September 2022 - Upcoming</li>
                     <li>Relevant courses: Data Science, Machine Learning Fundamentals, and Data Visualization</li>
                 </ul>
-            </article>
-            <article id="bacUniLu">
-                <h4>Bachelor of Science in Computer Science at University of Luxembourg</h4>
+            </div>
+            <div class="anchor" id="bacUniLu"></div>
+            <div>
+                <h4 class="title">Bachelor of Science in Computer Science at University of Luxembourg</h4>
                 <ul>
-                    <li>Date: September 2019 - July 2022</li>
+                    <li class="date">Date: September 2019 - July 2022</li>
                     <li>GPA: 3.0</li>
                     <li>
                         Relevant courses: Web development, Software Engineering, Networking and Communication, Cybersecurity 1 and 2, <br>
                         Human Computer Interaction and User Centered Design
                     </li>
                 </ul>
-            </article>
-            <article id="oc">
-                <h4>Online Courses</h4>
+            </div>
+            <div class="anchor" id="oc"></div>
+            <div>
+                <h4 class="title">Online Courses</h4>
                 <ul>
                     <li> Design in Art and Concepts Specialization (Coursera - CalArts) </li>
                     <li> Data Mining Specialization by the University of Illinois at Urbana-Champaign </li>
                 </ul>
-            </article>
+            </div>
         </main>
+        <footer>
+            <h3>Contact Me</h3>
+            <figure class="contacts">
+                <a href="https://github.com/elnukakujo" target="_blank"><img src="img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
+                <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
+            </figure>
+        </footer>
     </body>
 </html>
