--- a/index.html
+++ b/index.html
@@ -18,25 +18,24 @@
                 <a href="./projects.html">Projects</a>
             </div>
         </div>
-        <div id='header'>
-            <div class="intro">
-                <figure class="fig_me">
-                    <a href="aboutme.html"><img src="img/me.jpg" alt="A picture of me" width="325" height="500"/></a>
-                </figure>
-                <section>
-                    <a href="./aboutme.html"><h3>About Me</h3></a>
-                    <p> 
-                        Hi, my name is Noé Jager, I am a master student in Computer Science. Through my university years, 
-                        I have developed a diverse skillset in programming applications, and a hunger for new challenges. 
-                        Since then, I have accumulated a wealth of programing experience and computer 
-                        knowledge in areas such as Artificial Intelligence, Data Science/Data Visualizations. 
-                        Please feel free to explore my portfolio, and I'd be delighted to discuss potential opportunities for collaboration. 
-                    </p>
-                </section>
-            </div>
-        </div>
         <main>
-            <div id="education">
+            <div id='header'>
+                <div class="intro">
+                    <figure class="fig_me">
+                        <a href="aboutme.html"><img src="img/me.jpg" alt="A picture of me" width="325" height="500"/></a>
+                    </figure>
+                    <section>
+                        <a href="./aboutme.html"><h3>About Me</h3></a>
+                        <p> 
+                            I'm Noé Jager, a master's student in Computer Science, with a diverse skillset honed during my university years and 
+                            a passion for tackling new challenges. Over time, I've gained extensive experience in programming, specializing in 
+                            Artificial Intelligence, Data Science, Data Visualizations, and more. Feel free to browse my portfolio. I'm excited to discuss 
+                            potential collaboration opportunities with you.
+                        </p>
+                    </section>
+                </div>
+            </div>
+            <div id="education_intro">
                 <h3>Education</h3>
                 <div class="img">
                     <figure class="udem">
@@ -46,11 +45,13 @@
                 </div>
                 <div class="links">
                     <a href="./education.html#masterUdem"><h4>Master in Computer Science at Université de Montréal</h4></a>
+                    <br>
                     <a href="./education.html#bacUniLu"><h4>Bachelor of Science in Computer Science at University of Luxembourg</h4></a>
+                    <br>
                     <a href="./education.html#oc"><h4>Online Courses</h4></a>
                 </div>
             </div>
-            <div id="projects">
+            <div id="projects_intro">
                 <h3>Projects</h3>
                 <div class="img">
                     <figure>
@@ -60,12 +61,19 @@
                     </figure>
                 </div>
                 <div class="links">
-                    <a href="./projects.html#0"><h4>Drawing with a webcam</h4></a>
-                    <a href="./projects.html#1"><h4>Design of a privacy app with Figma</h4></a>
-                    <a href="./projects.html#2"><h4>Handwriting generator with Tensorflow</h4></a>
+                    <a href="./projects.html#6"><h4>Drawing with a webcam</h4></a>
+                    <br>
+                    <a href="./projects.html#5"><h4>Design of a privacy app with Figma</h4></a>
+                    <br>
+                    <a href="./projects.html#4"><h4>Handwriting generator with Tensorflow</h4></a>
+                    <br>
                     <a href="./projects.html#3"><h4>Conversational Chatbot with Tensorflow</h4></a>
-                    <a href="./projects.html#4"><h4>Q Learning for a drone in a simulated environment</h4></a>
-                    <a href="./projects.html#5"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
+                    <br>
+                    <a href="./projects.html#2"><h4>Q Learning for a drone in a simulated environment</h4></a>
+                    <br>
+                    <a href="./projects.html#1"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
+                    <br>
+                    <a href="./projects.html#0"><h4> Chase with Sparki </h4></a> 
                 </div>
             </div>
         </main>
