--- a/projects.html
+++ b/projects.html
@@ -17,65 +17,100 @@
                 <a href="./projects.html">Projects</a>
             </div>
         </div>
-        <main>
+        <main id="projects">
             <h3>Projects</h3>
-            <h4 id="0"><a href="https://github.com/elnukakujo/BSP06-Drawing-with-a-webcam">Drawing with a webcam</a></h4>
-            <ul>
-                <li> Date: February - June 2022 </li>
-                <li> Developed a real-time drawing application using Python and openCV </li>
-                <li> Analyzed finger positions to determine drawing actions </li>
-            </ul>
-            <hr>
-            <h4 id="1">Design of a privacy app with Figma</h4>
-            <embed 
-                width="560" 
-                height="315" 
-                src="https://www.youtube.com/embed/QCm1njo0ayM?si=wlDq4pp-bgf6woDg" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" 
-                allowfullscreen>
-            <hr>
-            <h4 id="2">Handwriting generator with Tensorflow</h4>
-            <ul>
-                <li> Date: September 2021 - January 2022 </li>
-                <li> Created a Recurrent Neural Network in Python with the TensorFlow library </li>
-                <li> Data extraction, cleaning, definition of a model, its training, then creation of the Chatbot interface </li>
-                <li> The model had 3 parts: encoding, Bahdanau Attention, and decoding </li>
-                <li> Replicated various handwriting styles using a dataset from a separate project </li>
-            </ul>
-            <hr>
-            <h4 id="3">Conversational Chatbot with Tensorflow </h4>
-            <ul>
-                <li> Date: February - June 2021 </li>
-                <li> Implemented a Convolutional Neural Network for chatbot functions in Python with TensorFlow </li>
-                <li> Reddit threads with parent commentaries as a dataset between French and English and engages in small talk </li>
-            </ul>
-            <hr>
-            <h4 id="4">Q Learning for a drone in a simulated environment</h4>
-            <ul>
-                <li> Date: September 2020 - January 2021 </li>
-                <li> Trained a drone to navigate while avoiding obstacles in a simulated environment (airsim) using Python </li>
-                <li> Q-learning with a defined Q table and rewards </li>
-            </ul>
-            <hr>
-            <h4 id="5"> Control of a group of drone with Unreal Engine 4 using Python </h4>
-            <ul>
-                <li>Date: February - June 2020</li>
-                <li>Collaborated with a researcher to create a simulated environment with quadrotors as agents</li>
-                <li>Controlled drones to avoid obstacles and collisions using Unreal Engine 4 and Python</li>
-                <li>Applied linear algebra concepts for precise drone movements</li>
-            </ul>
-            <embed 
-                width="560" 
-                height="315" 
-                src="https://www.youtube.com/embed/V8-CfdUBPYI?si=k667HmWQLU5A2UTB" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" 
-                allowfullscreen>
+            <div class="anchor" id="6"></div>
+            <div>
+                <h4 class="title"><a href="https://github.com/elnukakujo/BSP06-Drawing-with-a-webcam" target="_blank">Drawing with a webcam</a></h4 class="title">
+                <ul>
+                    <li class="date"> Date: February - June 2022 </li>
+                    <li> With the tutoring of Prof. Dr. Luis A. LEIVA at University of Luxembourg </li>
+                    <li> Developed a real-time drawing application using Python and openCV </li>
+                    <li> Analyzed finger positions to determine drawing actions </li>
+                </ul>
+            </div>
+            <div class="anchor" id="5"></div>
+            <div>
+                <h4 class="title">Design of a privacy app with Figma</h4 class="title">
+                <embed 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/QCm1njo0ayM?si=wlDq4pp-bgf6woDg" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+            </div>
+            <div class="anchor" id="4"></div>
+            <div>
+                <h4 class="title">Handwriting generator with Tensorflow</h4 class="title">
+                <ul>
+                    <li class="date"> Date: September 2021 - January 2022 </li>
+                    <li> With the tutoring of Prof. Dr. Luis A. LEIVA at University of Luxembourg </li>
+                    <li> Created a Recurrent Neural Network in Python with the TensorFlow library </li>
+                    <li> Data extraction, cleaning, definition of a model, its training, then creation of the Chatbot interface </li>
+                    <li> The model had 3 parts: encoding, Bahdanau Attention, and decoding </li>
+                    <li> Replicated various handwriting styles using a dataset from a separate project </li>
+                </ul>
+            </div>
+            <div class="anchor" id="3"></div>
+            <div>
+                <h4 class="title">Conversational Chatbot with Tensorflow </h4 class="title">
+                <ul>
+                    <li class="date"> Date: February - June 2021 </li>
+                    <li> With the tutoring of Prof Dr Christoph Schommer at University of Luxembourg </li>
+                    <li> Implemented a Convolutional Neural Network for chatbot functions in Python with TensorFlow </li>
+                    <li> Reddit threads with parent commentaries as a dataset between French and English and engages in small talk </li>
+                </ul>
+            </div>
+            <div class="anchor" id="2"></div>
+            <div>
+                <h4 class="title">Q Learning for a drone in a simulated environment</h4 class="title">
+                <ul>
+                    <li class="date"> Date: September 2020 - January 2021 </li>
+                    <li> With the tutoring of Dr Jose Luis Sanchez Lopez at University of Luxembourg </li>
+                    <li> Trained a drone to navigate while avoiding obstacles in a simulated environment (airsim) using Python </li>
+                    <li> Q-learning with a defined Q table and rewards </li>
+                </ul>
+            </div>
+            <div class="anchor" id="1"></div>
+            <div>
+                <h4 class="title"> Control of a group of drone with Unreal Engine 4 using Python </h4 class="title">
+                <ul>
+                    <li class="date">Date: February - June 2020</li>
+                    <li>With the tutoring of Dr Gregoire Danoy at University of Luxembourg to create a simulated environment with quadrotors as agents</li>
+                    <li>Controlled drones to avoid obstacles and collisions using Unreal Engine 4 and Python</li>
+                    <li>Applied linear algebra concepts for precise drone movements</li>
+                </ul>
+                <embed 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/V8-CfdUBPYI?si=k667HmWQLU5A2UTB" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+            </div>
+            <div class="anchor" id="0"></div>
+            <div>
+                <h4 class="title"> Chase with Sparki </h4 class="title">
+                <ul>
+                    <li class="date">Date: September 2019 - January 2020</li>
+                    <li>With the tutoring of Dr Gregoire Danoy at University of Luxembourg, learned about Sparki </li>
+                    <li>Coded Sparki in Sparkiduino to chase another Sparki</li>
+                    <li>They also needed to remain in an enclosure delimited by markers on the ground</li>
+                </ul>
+            </div>
         </main>
+        <footer>
+            <h3>Contact Me</h3>
+            <figure class="contacts">
+                <a href="https://github.com/elnukakujo" target="_blank"><img src="img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
+                <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
+            </figure>
+        </footer>
     </body>
 </html>
