Test soluce mobile scale

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
             About me | Noé Jager
         </title>
         <link href="./style.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width,maximum-scale=1.0" />
     </head>
     <body>
         <div id="nav">
