--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
                 <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
