--- a/aboutme.html
+++ b/aboutme.html
@@ -18,8 +18,73 @@
                 <a href="./projects.html">Projects</a>
             </div>
         </div>
-        <main>
-            
+        <main id="aboutme">
+            <!-- 
+                1. Introduction: Begin with a brief introduction about yourself or your brand. Include your name, job title (if applicable), 
+                and a sentence or two about what you do or what your brand represents.
+            -->
+            <p>
+                Hello and welcome to my website! My name is Noe Jager, and I'm currently pursuing a master's degree in Computer Science at the University of Montreal. 
+                While I spend most of my time studying and enjoying life in Montreal, this year, I've given myself the mission to work on a variety of projects 
+                to expand my horizons and explore different domains. 
+            </p> 
+            <!--
+                2. Background: Share some background information about yourself or your brand. This could include your education, professional experience, 
+                or how your brand got started. Highlight any relevant achievements or milestones.
+            -->
+            <p>
+                In the summer of 2022, I completed my bachelor's degree at the University of Luxembourg, known for its modernity and its 93 world ranking in Computer Science 
+                (Times Higher Education ranking 2022). Eager to explore the 'France in America', I embarked on a journey to Montreal. 
+                Fluent in four languages (French, English, German, Japanese), I have gained valuable experience from a diverse range of projects undertaken during my bachelor studies, 
+                often in collaboration with esteemed researchers. 
+                These projects spanned areas such as Artificial Intelligence, Robotics like my <a href="./projects.html#2"> Q Learning for a drone in a simulated environment</a> 
+                and <a href="./projects.html#1">Control of a group of drone with Unreal Engine 4 using Python</a> projects, and  Human-Computer Interaction, and Computer Vision 
+                with <a href="./projects.html#5">Design of a privacy app with Figma</a> and <a href="./projects.html#6">Drawing with a webcam</a>. 
+                I invite you to explore my <a href="./education.html">Education</a> and <a href="./projects.html">Projects</a> pages for further insights into my academic and professional journey.
+            </p>
+            <!--
+                3. Mission or Purpose: Clearly communicate your mission or purpose. Explain what motivates you or your brand and why you do what you do. This helps your 
+                audience understand your values and goals.
+            -->
+            <p>
+                I am driven by a passion to delve into the myriad domains within the dynamic realm of computer science. My goal is to continuously expand my expertise 
+                by staying abreast of emerging software, programming languages, and frameworks. By doing so, I aim to undertake increasingly intricate projects over time. 
+                Additionally, I am eager to forge connections and foster collaborations with fellow enthusiasts, believing that our collective efforts will yield superior results.
+            </p>
+            <!--
+                4. Values: Outline your core values. This could include principles like integrity, creativity, sustainability, or any other values that are 
+                important to you or your brand.
+            -->
+            <p>
+                I prioritize effective communication and teamwork, drawing from experiences such as attending various summer camps. These experiences have honed my ability 
+                to collaborate, strategize, and contribute meaningfully within a team dynamic. Furthermore, my passion for drawing fuels my creativity, influencing my approach 
+                to problem-solving and project development. Additionally, my university education has ingrained in me the importance of diligence and time management. 
+                I adhere to the principle of tackling tasks promptly and persisting until completion, ensuring a focused and efficient workflow.
+            </p>
+            <!--
+                7. Personal Touch: Add a personal touch by sharing some fun or interesting facts about yourself or your team. This helps humanize your brand 
+                and makes you more relatable to your audience.
+            -->
+            <p>
+                In addition to my professional pursuits, I am deeply engaged in various personal endeavors that enrich my life outside of work. 
+                Participating in numerous team projects and events has been a fulfilling aspect of my journey, fostering collaboration and growth. 
+                Beyond these endeavors, I find solace and inspiration in exploration and creativity. Having traveled to over 50 countries across four continents, 
+                I am passionate about immersing myself in diverse cultures and languages, each offering unique perspectives on the world. 
+                Moreover, after work, I indulge in the immersive worlds of video games and the captivating narratives of science fiction books. 
+                These hobbies not only provide an enjoyable escape but also fuel my imagination and creativity, contributing to a well-rounded lifestyle.
+            </p>
+            <!--
+                8. Call to Action: End with a clear call to action. This could be inviting visitors to contact you, subscribe to your newsletter, or follow 
+                you on social media.
+            -->
+            <p>
+                I invite you to contact me down below if you have any fun and interesting projects you need some help on. And I also recommend you to go see my 
+                <a href="./education.html">Education</a> and <a href="./projects.html">Projects</a> pages.
+            </p>
+            <!--
+                9. Visuals: Incorporate visuals such as photos or videos to make your About Me page more engaging. This could include pictures of yourself, 
+                your team, your workspace, or your products.
+            -->
         </main>
         <footer>
             <h3>Contact Me</h3>
