Reorganization of the project files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Home | Noé Jager
         </title>
-        <link href="./style.css" rel="stylesheet">
+        <link href="./assets/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,maximum-scale=1.0" />
     </head>
     <body>
@@ -22,7 +22,7 @@
             <div id='header'>
                 <div class="intro">
                     <figure class="fig_me">
-                        <a href="aboutme.html"><img src="img/me.jpg" alt="A picture of me" width="325" height="500"/></a>
+                        <a href="aboutme.html"><img src="assets/img/index/me.jpg" alt="A picture of me" width="325" height="500"/></a>
                     </figure>
                     <section>
                         <a href="./aboutme.html"><h3>About Me</h3></a>
@@ -39,8 +39,8 @@
                 <h3>Education</h3>
                 <div class="img">
                     <figure class="udem">
-                        <img src="img/udem_ete.jpg" alt="Udem in Summer" width="325" height="500">
-                        <img src="img/udem_neige.jpg" alt="Udem in Winter" width="325" height="500">
+                        <img src="assets/img/index/udem_ete.jpg" alt="Udem in Summer" width="325" height="500">
+                        <img src="assets/img/index/udem_neige.jpg" alt="Udem in Winter" width="325" height="500">
                     </figure>
                 </div>
                 <div class="links">
@@ -55,9 +55,9 @@
                 <h3>Projects</h3>
                 <div class="img">
                     <figure>
-                        <img src="img/projects/sparki.jpg" alt="A little Sparki robot" width="325" height="500">
-                        <img src="img/projects/unreal_engine5.png" alt="A little Sparki robot" width="500" height="325">
-                        <img src="img/projects/Q_learning_drone.png" alt="A little Sparki robot" width="500" height="325">
+                        <img src="assets/img/projects/sparki.jpg" alt="A little Sparki robot" width="325" height="500">
+                        <img src="assets/img/projects/unreal_engine5.png" alt="A little Sparki robot" width="500" height="325">
+                        <img src="assets/img/projects/Q_learning_drone.png" alt="A little Sparki robot" width="500" height="325">
                     </figure>
                 </div>
                 <div class="links">
@@ -80,9 +80,9 @@
         <footer>
             <h3>Contact Me</h3>
             <figure class="contacts">
-                <a href="https://github.com/elnukakujo" target="_blank"><img src="img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
-                <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
+                <a href="https://github.com/elnukakujo" target="_blank"><img src="assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
+                <a href="mailto:noe.p.jager@gmail.com"><img src="assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
         <script src="script.js"></script>
